After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729785 - Application permits to add images in recent view
Application permits to add images in recent view
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-05-08 06:56 UTC by Yuri Myasoedov
Modified: 2014-05-15 16:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Yuri Myasoedov 2014-05-08 06:56:57 UTC
Application permits to add images in recent view. But this possibility is useless.

How to reproduce:

 * open recent view;
 * click on Plus button in top left corner;
 * choose "Add local video...";
 * choose "All files" in bottom combobox;
 * choose any image file;
 * click on "Add" button.
Comment 1 Yuri Myasoedov 2014-05-08 07:08:51 UTC
If you have added image files, GNOME Videos will crash at startup [1]

[1] https://bugzilla.gnome.org/show_bug.cgi?id=729785
Comment 2 Yuri Myasoedov 2014-05-08 11:55:46 UTC
Sorry, I confused URLs, the right one is https://bugzilla.gnome.org/show_bug.cgi?id=729787
Comment 3 Bastien Nocera 2014-05-15 14:54:13 UTC
(In reply to comment #0)
> Application permits to add images in recent view. But this possibility is
> useless.

Talk about shooting yourself in the foot...
Comment 4 Bastien Nocera 2014-05-15 16:07:53 UTC
commit dbb06628849547b87123ed5882099b704afc32c2
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu May 15 18:06:22 2014 +0200

    main: Remove "all files" filters from the file choosers
    
    So that images can't be added. Also remove audio files as a filter,
    as we're a movie player, not an audio one.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729785
Comment 5 Yuri Myasoedov 2014-05-15 16:17:45 UTC
Does this mean that visualisation will be removed in next releases?
Comment 6 Bastien Nocera 2014-05-15 16:35:42 UTC
(In reply to comment #5)
> Does this mean that visualisation will be removed in next releases?

it's already been removed.
Comment 7 Bastien Nocera 2014-05-15 16:42:32 UTC
See bug 727761