main: Remove "all files" filters from the file choosers

So that images can't be added. Also remove audio files as a filter,
as we're a movie player, not an audio one.

https://bugzilla.gnome.org/show_bug.cgi?id=729785